--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>nz.ac.waikato.cms.adams</groupId>
   <artifactId>matrix-algorithms</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>0.0.1</version>
   <packaging>jar</packaging>
 
   <parent>
@@ -89,7 +89,7 @@
     <connection>scm:git:https://github.com/waikato-datamining/matrix-algorithms</connection>
     <developerConnection>scm:git:https://github.com/waikato-datamining/matrix-algorithms</developerConnection>
     <url>https://github.com/waikato-datamining/matrix-algorithms</url>
-    <tag>HEAD</tag>
+    <tag>matrix-algorithms-0.0.1</tag>
   </scm>
 
   <dependencies>
