--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,14 @@
       <artifactId>ojalgo</artifactId>
       <version>45.1.0</version>
     </dependency>
+
+    <!--&lt;!&ndash; https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 &ndash;&gt;-->
+    <!--<dependency>-->
+      <!--<groupId>org.apache.commons</groupId>-->
+      <!--<artifactId>commons-lang3</artifactId>-->
+      <!--<version>3.7</version>-->
+    <!--</dependency>-->
+
   </dependencies>
 
   <build>
