--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,12 @@
       <artifactId>ojalgo</artifactId>
       <version>46.0.0</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-math</artifactId>
+      <version>2.2</version>
+    </dependency>
   </dependencies>
 
   <build>
