--- a/pom.xml
+++ b/pom.xml
@@ -135,12 +135,13 @@
       <groupId>gov.nist.math</groupId>
       <artifactId>jama</artifactId>
       <version>1.0.3</version>
+      <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>org.ojalgo</groupId>
       <artifactId>ojalgo</artifactId>
-      <version>46.0.0</version>
+      <version>48.0.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
 
