--- a/pom.xml
+++ b/pom.xml
@@ -141,7 +141,7 @@
     <dependency>
       <groupId>org.ojalgo</groupId>
       <artifactId>ojalgo</artifactId>
-      <version>48.0.0-SNAPSHOT</version>
+      <version>48.0.0</version>
     </dependency>
   </dependencies>
 
