--- a/pom.xml
+++ b/pom.xml
@@ -84,13 +84,13 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <junit.version>5.3.0</junit.version>
-    <junit.platform.version>1.3.0</junit.platform.version>
+    <junit.version>5.11.3</junit.version>
+    <junit.platform.version>1.11.3</junit.platform.version>
   </properties>
 
   <scm>
-    <connection>scm:git:https://github.com/waikato-datamining/matrix-algorithms</connection>
-    <developerConnection>scm:git:https://github.com/waikato-datamining/matrix-algorithms</developerConnection>
+    <connection>scm:git:ssh://git@github.com/waikato-datamining/matrix-algorithms</connection>
+    <developerConnection>scm:git:ssh://git@github.com/waikato-datamining/matrix-algorithms</developerConnection>
     <url>https://github.com/waikato-datamining/matrix-algorithms</url>
     <tag>HEAD</tag>
   </scm>
@@ -165,10 +165,10 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.0</version>
+          <version>3.12.1</version>
           <configuration>
-            <source>1.8</source>
-            <target>1.8</target>
+            <source>11</source>
+            <target>11</target>
           </configuration>
         </plugin>
 
